plugins {
    id 'java'
    id 'org.cadixdev.licenser' version '0.6.1'
    id 'io.freefair.lombok' version '6.2.0'
    id 'com.github.johnrengelman.shadow' version '7.0.0'
}

def halpBotVerson = '2.0.8'
File libs = file('libs')

group 'nz.pumbas.halpbot'
version halpBotVerson

repositories {
    mavenCentral()

    maven {
        url "https://m2.dv8tion.net/releases"
    }
}

test {
    useJUnitPlatform()
}

subprojects { Project subProject ->
    apply plugin: 'java'
    apply plugin: 'org.cadixdev.licenser'
    apply plugin: 'io.freefair.lombok'
    apply plugin: 'com.github.johnrengelman.shadow'

    group 'nz.pumbas.halpbot'
    version halpBotVerson

    license {
        header = rootProject.file('LICENSE')
        ignoreFailures = true
        include '**/*.java'
    }

    sourceCompatibility = 16
    targetCompatibility = 16
}

tasks.build {
    dependsOn tasks.updateLicenses
}

allprojects {
    tasks.withType(JavaCompile) {
        options.compilerArgs << '-parameters'
    }

    plugins.withType(JavaPlugin) {
        repositories {
            mavenCentral()
            maven {
                url 'https://m2.dv8tion.net/releases'
            }
        }

        dependencies {
            implementation 'net.dv8tion:JDA:4.3.0_333'
            implementation 'org.checkerframework:checker-qual:3.18.1'

            implementation 'org.reflections:reflections:0.10.2'
            implementation 'org.javassist:javassist:3.28.0-GA'
            implementation 'javax.inject:javax.inject:1'
            implementation 'com.fasterxml.jackson.core:jackson-core:2.13.1'
            implementation 'org.hibernate:hibernate-core:5.6.3.Final'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-properties:2.13.1'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.1'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-toml:2.13.1'
            implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.1'
            implementation 'org.codehaus.woodstox:woodstox-core-asl:4.4.1'

            implementation 'org.mockito:mockito-core:4.2.0'

            implementation 'org.apache.derby:derby:10.14.2.0'

            implementation 'javax.persistence:javax.persistence-api:2.2'
            implementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
            testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
            testImplementation 'ch.qos.logback:logback-classic:1.2.10'

            implementation fileTree(dir: libs, include: '*.jar')
//            implementation 'org.dockbox.hartshorn:hartshorn-core:22.1'
//            implementation 'org.dockbox.hartshorn:hartshorn-data:22.1'
        }

        test {
            useJUnitPlatform()
        }
    }
}